# teiniker-lectures-embedded-cxx

./: .gitignore  README.md
configuration-management/: README.md
configuration-management/building/build-steps/: README.md
configuration-management/building/cmake/: README.md
configuration-management/building/compiler-flags/: README.md
configuration-management/building/project-layout/: README.md
configuration-management/debugging/: README.md
configuration-management/debugging/array-stack/: .gitignore  CMakeLists.txt  stack.cpp  stack.h  test.cpp
configuration-management/debugging/date/: CMakeLists.txt  date.cpp  date.h
configuration-management/generative-ai/: README.md
configuration-management/testing/: README.md
configuration-management/testing/googletest/: README.md
introduction/: README.md
programming-c++/: README.md
programming-c++/embedded/: README.md
programming-c++/embedded-c++/: README.md
programming-c++/first-steps/: CKnowHow.md  README.md
programming-c++/first-steps/auto-initialization/: CMakeLists.txt  README.md
programming-c++/first-steps/default-arguments/: CMakeLists.txt  README.md
programming-c++/implementation-aspects/: README.md
programming-c++/stl/container/optional/percentage/: CMakeLists.txt  percentage.cpp  percentage.h  test.cpp
software-modeling/: README.md
software-modeling/class-diagram/: README.md
software-modeling/object-diagram/: README.md
software-modeling/package-diagram/: README.md
software-modeling/sequence-diagram/: README.md
software-modeling/state-machine-diagram/: README.md
(+280 files in other folders)
